fix background image jump

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
   --test-yourself: var(--accordion-not-collapsed-bg);
   --hover-btn-group: var(--darkest-brown-light-shade);
   --dropdown-hover: var(--brown-board-dark);
-  --body-dark: var(--eerie-black);
+  /* --body-dark: var(--eerie-black); */
 
   --shadow-color: 24deg 52% 4%;
   --shadow-elevation-low: 0.1px 0.2px 0.2px hsl(var(--shadow-color) / 0.55),
@@ -102,17 +102,40 @@ body {
   font-size: 2rem;
 }
 
+#bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  transform: scale(1);
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-image: url("wood.png"); */
+    background: var(--background);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
 body {
   line-height: 1;
-  /* color: var(--foreground); */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   /* The text of the element and its sub-elements is not selectable. */
   user-select: none;
-  background-image: var(--background);
+  /* background-image: var(--background);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: cover;
+  background-size: cover; */
 }
 
 /*======================== HEADER ======================*/
@@ -235,7 +258,7 @@ body.hasTouch .active-arrow {
 }
 
 .darkmode {
-  background: var(--body-dark);
+  --background: var(--eerie-black);
   --shadow-color: 145deg 100% 0%;
 
   --light-color-board: var(--green-board-light);
